New JSON-based settings file.